[package]
name = "roots"
version = "0.1.0"
authors = ["Nathan Knowler <nathan@knowler.me>"]
edition = "2018"

[dependencies]
git2 = "0.8.0"
clap = { version = "2.32.0", features = ["yaml"] }
yaml-rust = { version = "0.3.5", optional = true }

[features]
default = ["yaml"]
yaml = ["yaml-rust"]

[profile.release]
opt-level = 3
debug = false
lto = true
panic = "abort"
