[package]
name = "roots-cli"
version = "0.3.0"
authors = ["Nathan Knowler <nathan@knowler.me>"]
edition = "2018"

[dependencies]
git2 = "0.8.0"
clap = { version = "2.32.0", features = ["yaml"] }
yaml-rust = { version = "0.4.2", optional = true }

[features]
default = ["yaml"]
yaml = ["yaml-rust"]

[profile.release]
opt-level = 3
debug = false
lto = true
panic = "abort"
